--- a/courseji/src/main/resources/application.yml
+++ b/courseji/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    database-platform: org.hibernate.dialect.MySQLDialect
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/courseji?useSSL=true
     username: courseji
