--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,6 +21,8 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+      - name: show env message
+        run: echo "::debug::dataBasePassword is ${{ secrets.DatabasePassword }}"
       - name: Setup MySQL
         # You may pin to the exact commit or the version.
         # uses: mirromutth/mysql-action@de1fba8b3f90ce8db80f663a7043be3cf3231248
