--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,14 +22,14 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: show env message
-        run: echo "::debug::dataBasePassword is ${{ secrets.DatabasePassword }}"
+        run: echo "::debug::dataBasePassword is ${{ secrets.ROOTPASSWORD }}"
       - name: Setup MySQL
         # You may pin to the exact commit or the version.
         # uses: mirromutth/mysql-action@de1fba8b3f90ce8db80f663a7043be3cf3231248
         uses: mirromutth/mysql-action@v1.1
         with:
           # MYSQL_ROOT_PASSWORD - root superuser password
-          mysql root password: ${{ secrets.DatabasePassword }} # optional, default is
+          mysql root password: ${{ secrets.ROOTPASSWORD }} # optional, default is
           # MYSQL_DATABASE - name for the default database that is created
           mysql database: courseji # optional, default is
       - name: Build with Maven
