--- a/courseji/src/main/resources/application.yml
+++ b/courseji/src/main/resources/application.yml
@@ -5,8 +5,7 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        format-sql: true
-    database-platform: org.hibernate.dialect.MySQLDialect
+        format_sql: true
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/courseji?useSSL=true&serverTimezone=Asia/Shanghai
     username: root
