SpringBoot添加日志配置和端口配置

--- a/courseji/src/main/resources/application.yml
+++ b/courseji/src/main/resources/application.yml
@@ -14,3 +14,10 @@ spring:
 jasypt:
   encryptor:
     password: littlecorgi
+
+logging:
+  file:
+    name: courseji.log
+    path: logs/config/
+server:
+  port: 10800
