--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,8 +24,6 @@ jobs:
       - name: show env message
         run: echo "::debug::dataBasePassword is ${{ secrets.ROOTPASSWORD }}"
       - name: Setup MySQL
-        # You may pin to the exact commit or the version.
-        # uses: mirromutth/mysql-action@de1fba8b3f90ce8db80f663a7043be3cf3231248
         uses: mirromutth/mysql-action@v1.1
         with:
           # MYSQL_ROOT_PASSWORD - root superuser password
@@ -35,13 +33,11 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file courseji/pom.xml
       - name: SCP Files
-        # You may pin to the exact commit or the version.
-        # uses: appleboy/scp-action@b476d5806f2a4c1ed5902a87fa91b0623cac7258
         uses: appleboy/scp-action@v0.0.1
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.PSERVER_ASSWORD }}
+          password: ${{ secrets.SERVER_PASSWORD }}
           source: "./courseji/target/courseji-0.0.1-SNAPSHOT.jar"
           target: "/root/CoursejiServer/"
       - name: executing remote ssh commands using password
@@ -49,7 +45,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.PSERVER_ASSWORD }}
+          password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             whoami
             nohup java -jar /root/CoursejiServer/courseji-0.0.1-SNAPSHOT.jar > courseji.txt &
