--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,6 +40,7 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           source: "./courseji/target/courseji-0.0.1-SNAPSHOT.jar"
           target: "/root/CoursejiServer/"
+          port: 22
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         with:
