--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,4 +49,4 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             whoami
-            nohup java -jar /root/CoursejiServer/courseji/target/courseji-0.0.1-SNAPSHOT.jar > courseji.txt &
+            nohup java -jar /root/CoursejiServer/courseji/target/courseji-0.0.1-SNAPSHOT.jar > /root/CoursejiServer/courseji.txt &
