--- a/.github/workflows/build_maven_on_pr.yml
+++ b/.github/workflows/build_maven_on_pr.yml
@@ -1,11 +1,9 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: Java CI with Maven On PullRequest
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
 
@@ -32,21 +30,4 @@ jobs:
           mysql database: courseji # optional, default is
       - name: Build with Maven
         run: mvn -B package --file courseji/pom.xml
-      - name: SCP Files
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          source: "./courseji/target/courseji-0.0.1-SNAPSHOT.jar"
-          target: "/root/CoursejiServer"
-          port: 22
-      - name: executing remote ssh commands using password
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          script: |
-            whoami
-            nohup java -jar /root/CoursejiServer/courseji/target/courseji-0.0.1-SNAPSHOT.jar > /root/CoursejiServer/courseji.txt &
+        
