--- a/.github/workflows/build_and_publish_project_on_push.yml
+++ b/.github/workflows/build_and_publish_project_on_push.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven On PullRequest
+name: Java CI with Maven And Push To Server On Push Master
 
 on:
   push:
