GitHub Action 添加nohup执行命令前先杀死之前的courseji进程

--- a/.github/workflows/build_and_publish_project_on_push.yml
+++ b/.github/workflows/build_and_publish_project_on_push.yml
@@ -47,5 +47,6 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             whoami
+            pkill -9 -f courseji
             nohup java -jar /root/CoursejiServer/courseji/target/courseji-0.0.1-SNAPSHOT.jar > /root/CoursejiServer/courseji.txt &
     
