添加log远程访问端口

--- a/courseji/src/main/resources/application.yml
+++ b/courseji/src/main/resources/application.yml
@@ -17,3 +17,13 @@ jasypt:
 
 server:
   port: 10800
+
+logging:
+  file:
+    name: log
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
