--- a/courseji/pom.xml
+++ b/courseji/pom.xml
@@ -24,6 +24,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         <!--Spring MVC RestAPI-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
