--- a/.github/workflows/build_and_publish_project_on_push.yml
+++ b/.github/workflows/build_and_publish_project_on_push.yml
@@ -39,13 +39,13 @@ jobs:
           source: "./courseji/target/courseji-0.0.1-SNAPSHOT.jar"
           target: "/root/CoursejiServer"
           port: 22
-      - name: executing remote ssh commands using password
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          script: |
-            ps -ef|grep "courseji-0.0.1-SNAPSHOT.jar" |grep -v grep|cut -c 9-15|xargs kill -9
-            nohup java -jar /root/CoursejiServer/courseji/target/courseji-0.0.1-SNAPSHOT.jar > /root/CoursejiServer/courseji.txt &
+#      - name: executing remote ssh commands using password
+#        uses: appleboy/ssh-action@master
+#        with:
+#          host: ${{ secrets.SERVER_HOST }}
+#          username: ${{ secrets.SERVER_USERNAME }}
+#          password: ${{ secrets.SERVER_PASSWORD }}
+#          script: |
+#            ps -ef|grep "courseji-0.0.1-SNAPSHOT.jar" |grep -v grep|cut -c 9-15|xargs kill -9
+#            nohup java -jar /root/CoursejiServer/courseji/target/courseji-0.0.1-SNAPSHOT.jar > /root/CoursejiServer/courseji.txt &
     
