--- a/courseji/pom.xml
+++ b/courseji/pom.xml
@@ -115,6 +115,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <!--腾讯云SDK-->
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java</artifactId>
+            <version>3.1.254</version>
+        </dependency>
     </dependencies>
 
     <build>
