--- a/courseji/pom.xml
+++ b/courseji/pom.xml
@@ -127,6 +127,12 @@
             <artifactId>jpush-client</artifactId>
             <version>3.4.8</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
     </dependencies>
 
     <build>
